--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         <li>Rua do Conde, nº 21</li>
         <li>Rio de Janeiro - RJ</li>
         <li data-semana = "1,2,3,4,5" data-horario = "8,18">Seg a Sexta 08 às 18</li>
+        <li>Doe <span class = "bitcoin"></span> bitcoin para ajudar o projeto</li>
       </ul>
     </section>
   
