--- a/index.html
+++ b/index.html
@@ -156,6 +156,6 @@
       </form>
     </div><!--modal-->
   </section><!--container-modal-->
-  <script src="script.js"></script>  
+  <script type = "module" src="js/script.js"></script>  
 </body>
 </html>
